<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/baseline_search_white_24"
        android:title="@string/action_search_text"
        android:iconTint="@color/greyColour"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_setting_btn"
        android:icon="@drawable/ic_account"
        app:showAsAction="withText"
        android:title="@string/action_setting_text" />
    <item
        android:id="@+id/action_logout_btn"
        android:title="@string/action_logout_text"
        app:showAsAction="withText"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        />
    <item
        android:id="@+id/action_add_post"
        android:title="@string/action_new_event"
        app:showAsAction="withText"

        />
    <item
        android:id="@+id/action_qr_code"
        android:title="@string/action_qr_code_reader"
        app:showAsAction="withText"

        />
</menu>